# colcon-discover-submodule

./: LICENSE  README.md  setup.cfg
colcon_discover_submodule/package_discovery/: submodule.py
