[metadata]
name = colcon-discover-submodule
version = attr: colcon_discover_submodule.__version__
description = Extension for colcon to update submodules.
keywords = colcon

[options]
install_requires =
  colcon-core>=0.5.3
packages = find:
zip_safe = true

[options.entry_points]
colcon_core.package_discovery =
    submodule = colcon_discover_submodule.package_discovery.submodule:SubmoduleDiscovery

[flake8]
import-order-style = google
